# AABBCD

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aabb_zacharysparrow/: aabb.py
src/aabb_zacharysparrow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/aabbcd/: aabb.py
tests/: .example.py.swp  example.py  test.py  tests.py
