[project]
name = "aabbcd"
version = "0.0.2"
authors = [
  { name="Zachary Sparrow", email="zacharysparrow@cornell.edu" },
]
description = "A package for finding axis-aligned bounding boxes for continuous distributions"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/zacharysparrow/AABBCD"
Issues = "https://github.com/zacharysparrow/AABBCD/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
